[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zencrawler"
version = "0.1.0"
description = "Async web crawling library built on zendriver"
requires-python = ">=3.11"
dependencies = ["zendriver>=0.15"]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.19"]
dev    = ["pytest>=8", "pytest-asyncio>=0.23", "aiosqlite>=0.19"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
